tests/sem/error/return.c
void main() {
    return 666;
}